--- a/css/login.css
+++ b/css/login.css
@@ -1,48 +1,3 @@
-* {
-    box-sizing: border-box;
-    padding: 0;
-    margin: 0;
-    scroll-behavior: smooth;
-}
-
-/* open-sans-regular - latin */
-@font-face {
-    font-display: swap;
-    /* Check https://developer.mozilla.org/en-US/docs/Web/CSS/@font-face/font-display for other options. */
-    font-family: 'Open Sans';
-    font-style: normal;
-    font-weight: 400;
-    src: url('../assets/fonts/open-sans-v40-latin-regular.woff2') format('woff2');
-    /* Chrome 36+, Opera 23+, Firefox 39+, Safari 12+, iOS 10+ */
-}
-
-/* open-sans-700 - latin */
-@font-face {
-    font-display: swap;
-    /* Check https://developer.mozilla.org/en-US/docs/Web/CSS/@font-face/font-display for other options. */
-    font-family: 'Open Sans';
-    font-style: normal;
-    font-weight: 700;
-    src: url('../assets/fonts/open-sans-v40-latin-700.woff2') format('woff2');
-    /* Chrome 36+, Opera 23+, Firefox 39+, Safari 12+, iOS 10+ */
-}
-
-:root {
-    --primary-color: #4589FF;
-    --placeholder: #D1D1D1;
-    --icons: #A8A8A8;
-
-}
-
-a {
-    text-decoration: none;
-}
-
-body {
-    font-family: 'Open Sans', sans-serif;
-    height: 100vh;
-}
-
 .main {
     height: 100vh;
     display: flex;
@@ -87,7 +42,7 @@ button {
 
 .btn {
     background-color: var(--primary-color);
-    color: var(--white-color);
+    color: var(--white);
     padding: 10px 16px;
     border-radius: 8px;
     /* cursor: pointer; */
@@ -100,9 +55,9 @@ button {
 
 .btn-secondary {
     background-color: transparent;
-    color: var(--dark-gray-color);
+    color: var(--dark-gray);
     padding: 10px 35px;
-    border: 1px solid var(--dark-gray-color);
+    border: 1px solid var(--dark-gray);
     border-radius: 8px;
     font-size: 24px;
 }
@@ -159,10 +114,18 @@ button {
     width: 100%;
     border: none;
     font-size: 19px;
-
 }
 
-.btn-cnt {
+.login-input::placeholder {
+    color: var(--placeholder);
+    font-size: 19px;
+}
+
+.login-input:focus {
+    outline: none;
+}
+
+.form-btn-cnt {
     align-self: stretch;
     justify-content: center;
     align-items: flex-start;
@@ -170,8 +133,6 @@ button {
     display: inline-flex;
 }
 
-/* .input-icon {
-    width: 24px;
-    height: 24px;
+.input-icon {
     color: var(--icons);
-} */
+}
