--- a/style.css
+++ b/style.css
@@ -29,6 +29,8 @@
 
 :root {
     --primary-color: #4589FF;
+    --white: #FFFFFF;
+    --dark-gray: #647188;
     --placeholder: #D1D1D1;
     --icons: #A8A8A8;
 
