--- a/style.css
+++ b/style.css
@@ -44,3 +44,34 @@ body {
     font-family: 'Open Sans', sans-serif;
     height: 100vh;
 }
+
+.main-div {
+    height: 100%;
+    width: 100%;
+    display: flex;
+    flex-direction: row;
+}
+
+.left {
+    width: 232px;
+    height: 100%;
+    background-color: var(--primary-color);
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.right {
+    width: calc(100% - 232px);
+    height: 100%;
+}
+
+.header {
+    width: 100%;
+    height: 96px;
+}
+
+.main {
+    width: 100%;
+    height: calc(100% - 96px);
+}
