--- a/style.css
+++ b/style.css
@@ -1,78 +1,76 @@
 * {
-    box-sizing: border-box;
-    padding: 0;
-    margin: 0;
-    scroll-behavior: smooth;
+  box-sizing: border-box;
+  padding: 0;
+  margin: 0;
+  scroll-behavior: smooth;
 }
 
 /* inter-regular - latin */
 @font-face {
-    font-display: swap;
-    /* Check https://developer.mozilla.org/en-US/docs/Web/CSS/@font-face/font-display for other options. */
-    font-family: 'Inter';
-    font-style: normal;
-    font-weight: 400;
-    src: url('../assets/fonts/inter-v18-latin-regular.woff2') format('woff2');
-    /* Chrome 36+, Opera 23+, Firefox 39+, Safari 12+, iOS 10+ */
+  font-display: swap;
+  /* Check https://developer.mozilla.org/en-US/docs/Web/CSS/@font-face/font-display for other options. */
+  font-family: "Inter";
+  font-style: normal;
+  font-weight: 400;
+  src: url("../assets/fonts/inter-v18-latin-regular.woff2") format("woff2");
+  /* Chrome 36+, Opera 23+, Firefox 39+, Safari 12+, iOS 10+ */
 }
 
 /* inter-700 - latin */
 @font-face {
-    font-display: swap;
-    /* Check https://developer.mozilla.org/en-US/docs/Web/CSS/@font-face/font-display for other options. */
-    font-family: 'Inter';
-    font-style: normal;
-    font-weight: 700;
-    src: url('../assets/fonts/inter-v18-latin-700.woff2') format('woff2');
-    /* Chrome 36+, Opera 23+, Firefox 39+, Safari 12+, iOS 10+ */
+  font-display: swap;
+  /* Check https://developer.mozilla.org/en-US/docs/Web/CSS/@font-face/font-display for other options. */
+  font-family: "Inter";
+  font-style: normal;
+  font-weight: 700;
+  src: url("../assets/fonts/inter-v18-latin-700.woff2") format("woff2");
+  /* Chrome 36+, Opera 23+, Firefox 39+, Safari 12+, iOS 10+ */
 }
 
 :root {
-    --primary-color: #2A3647;
-    --secondary-color: #29ABE2;
-    --white: #FFFFFF;
-    --dark-gray: #647188;
-    --style: #D1D1D1;
-    --icons: #A8A8A8;
-
+  --primary-color: #2a3647;
+  --secondary-color: #29abe2;
+  --white: #ffffff;
+  --black: #000000;
+  --dark-gray: #647188;
+  --light-blue: #29abe2;
+  --style: #d1d1d1;
+  --icons: #a8a8a8;
+  --active: #090131;
 }
 
 a {
-    text-decoration: none;
+  text-decoration: none;
 }
 
 body {
-    font-family: 'Inter', sans-serif;
-    height: 100vh;
+  font-family: "Inter", sans-serif;
+  height: 100vh;
 }
 
 .main-div {
-    height: 100%;
-    width: 100%;
-    display: flex;
-    flex-direction: row;
+  display: flex;
+  height: 100vh;
+  width: 100%;
 }
 
 .left {
-    width: 232px;
-    height: 100%;
-    background-color: var(--primary-color);
-    display: flex;
-    flex-direction: column;
-    align-items: center;
+  width: 232px;
+  background-color: #2f3c53;
+  color: white;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  padding: 32px 0;
 }
 
 .right {
-    width: calc(100% - 232px);
-    height: 100%;
-}
-
-.header {
-    width: 100%;
-    height: 96px;
+  flex-grow: 1;
+  display: flex;
+  flex-direction: column;
 }
 
 .main {
-    width: 100%;
-    height: calc(100% - 96px);
+  width: 100%;
+  height: calc(100% - 96px);
 }
