added new css and cleaned up js and html files

--- a/style.css
+++ b/style.css
@@ -60,7 +60,7 @@ body {
 }
 
 .left {
-  width: 232px;
+  width: 194px;
   background-color: #2f3c53;
   color: white;
   display: flex;
@@ -78,4 +78,31 @@ body {
 .main {
   width: 100%;
   height: calc(100% - 96px);
+}
+
+/* Chrome, Edge, Safari */
+::-webkit-scrollbar {
+  width: 10px;
+  height: 10px;
+}
+
+::-webkit-scrollbar-track {
+  background: var(--white);
+  border-radius: 10px;
+}
+
+::-webkit-scrollbar-thumb {
+  background-color: var(--light-blue);
+  border-radius: 10px;
+  border: 2px solid var(--white);
+}
+
+::-webkit-scrollbar-thumb:hover {
+  background-color: var(--primary-color);
+}
+
+/*Firefox */
+* {
+  scrollbar-width: thin;
+  scrollbar-color: var(--light-blue) var(--white);
 }
