--- a/css/login.css
+++ b/css/login.css
@@ -247,6 +247,10 @@ button {
   & a {
     color: var(--icons);
     font-size: 16px;
+
+    &:hover {
+      color: var(--secondary-color);
+    }
   }
 }
 
