--- a/css/signup.css
+++ b/css/signup.css
@@ -47,20 +47,15 @@ button {
   padding: 10px 35px;
   font-size: 21px;
   border: 1px solid var(--primary-color);
-}
 
-.btn-secondary {
-  background-color: transparent;
-  font-size: 21px;
-  color: var(--primary-color);
-  padding: 10px 35px;
-  border: 1px solid var(--primary-color);
+  &:disabled {
+    opacity: 0.5;
+    cursor: not-allowed;
+  }
 
-  &:hover {
-    border: 1px solid var(--secondary-color);
-    color: var(--secondary-color);
-    background-color: transparent;
-
+  &:enabled {
+    opacity: 1;
+    cursor: pointer;
   }
 }
 
@@ -84,8 +79,6 @@ button {
   box-shadow: 0px 0px 10px 3px rgba(0, 0, 0, 0.08);
   position: relative;
 }
-
-
 
 .signup-cnt {
   display: flex;
@@ -207,16 +200,6 @@ button {
       color: var(--secondary-color);
     }
   }
-}
-
-.btn-primary:disabled {
-  opacity: 0.5;
-  cursor: not-allowed;
-}
-
-.btn-primary:enabled {
-  opacity: 1;
-  cursor: pointer;
 }
 
 .footer-login-signup {
