--- a/css/header.css
+++ b/css/header.css
@@ -2,7 +2,7 @@
   height: 96px;
   width: 100%;
   background-color: var(--white);
-  box-shadow: 0 8px 8px -4px rgba(0, 0, 0, 0.1);
+  box-shadow: 0 8px 8px -4px var(--style);
   font-family: "Inter", sans-serif;
 }
 
