--- a/css/header.css
+++ b/css/header.css
@@ -9,6 +9,8 @@
 .header-content {
   height: 96px;
   width: 100%;
+  max-width: 1440px;
+  margin: 0 auto;
   padding: 0 30px 0 80px;
   display: flex;
   justify-content: space-between;
