--- a/css/summary.css
+++ b/css/summary.css
@@ -29,3 +29,21 @@
 .summary-headline span {
     font-size: 24px;
 }
+
+.summary-content {
+    display: flex;
+
+    background-color: lightpink;
+}
+
+.flex_1 {
+    flex: 1;
+}
+
+.summary-content-left {
+    background-color: lightgreen;    
+}
+
+.summary-content-right {
+    background-color: lightblue;
+}
