--- a/css/add_task.css
+++ b/css/add_task.css
@@ -26,7 +26,7 @@
     padding-right: 36px;
     margin-right: 36px;
     border-right: 1px solid #D1D1D1;
-  }
+}
 
 .form-group {
     margin-bottom: 20px;
@@ -74,16 +74,19 @@
     color: #D1D1D1;
     opacity: 1;
 }
+
 .form-group input::-moz-placeholder,
 .form-group textarea::-moz-placeholder {
     color: #D1D1D1;
     opacity: 1;
 }
+
 .form-group input:-ms-input-placeholder,
 .form-group textarea:-ms-input-placeholder {
     color: #D1D1D1;
     opacity: 1;
 }
+
 .form-group input:-moz-placeholder,
 .form-group textarea:-moz-placeholder {
     color: #D1D1D1;
@@ -92,12 +95,13 @@
 
 .priority-options {
     display: flex;
-    gap: 0.5rem;
+    gap: 10px;
 }
 
 .prio-btn {
     flex: 1;
-    padding: 0.5rem 1rem;
+    padding: 10px;
+    min-width: 128px;
     border: 1px solid #ccc;
     background: #fff;
     border-radius: 10px;
@@ -112,8 +116,33 @@
 }
 
 .prio-btn.selected {
-    background: #a8dadc;
-    border-color: #457b9d;
+    color: #fff;
+}
+
+.prio-btn:hover {
+    box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
+}
+
+.prio-btn.selected .prio-icon img {
+    filter: brightness(0) invert(1);
+}
+
+.prio-btn.selected[data-prio="urgent"] {
+    background-color: #FF3D00;
+    border-color: #FF3D00;
+    color: #fff;
+}
+
+.prio-btn.selected[data-prio="medium"] {
+    background-color: #FFA800;
+    border-color: #FFA800;
+    color: #fff;
+}
+
+.prio-btn.selected[data-prio="low"] {
+    background-color: #7AE229;
+    border-color: #7AE229;
+    color: #fff;
 }
 
 .prio-icon {
@@ -284,6 +313,14 @@
     margin-left: auto;
 }
 
-.select-box { order: 0; }
-.checkboxes { order: 1; }
-.selected-chips { order: 2; }
+.select-box {
+    order: 0;
+}
+
+.checkboxes {
+    order: 1;
+}
+
+.selected-chips {
+    order: 2;
+}
