--- a/css/signup.css
+++ b/css/signup.css
@@ -1,65 +1,3 @@
-.main-signup {
-  height: 100vh;
-  max-width: 1440px;
-  margin: 0 auto;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  position: relative;
-  /* overflow: hidden; */
-}
-
-.logo-cnt {
-  position: absolute;
-  top: 80px;
-  left: 80px;
-
-  & img {
-    width: 100px;
-  }
-}
-
-
-button {
-  border: none;
-  cursor: pointer;
-}
-
-.btn {
-  background-color: var(--primary-color);
-  color: var(--white);
-  padding: 10px 16px;
-  border-radius: 8px;
-  border: 1px solid var(--primary-color);
-  font-size: 16px;
-  font-weight: 700;
-  transition: all 0.125s ease-in-out;
-
-  &:hover {
-    background-color: var(--secondary-color);
-    border: 1px solid var(--secondary-color);
-    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
-
-  }
-}
-
-.btn-primary {
-  padding: 10px 35px;
-  font-size: 21px;
-  border: 1px solid var(--primary-color);
-
-  &:disabled {
-    opacity: 0.5;
-    cursor: not-allowed;
-  }
-
-  &:enabled {
-    opacity: 1;
-    cursor: pointer;
-  }
-}
-
 .btn-back {
   position: absolute;
   top: 64px;
@@ -76,42 +14,22 @@ button {
   }
 }
 
-.signup {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  flex-direction: column;
-  border-radius: 30px;
-  box-shadow: 0px 0px 10px 3px rgba(0, 0, 0, 0.08);
+.pos-rel {
   position: relative;
 }
 
+.w-600 {
+  width: 600px;
+}
+
 .signup-cnt {
+  width: 100%;
   display: flex;
   justify-content: center;
   align-items: center;
   flex-direction: column;
   gap: 32px;
   padding: 48px 88px;
-}
-
-.signup-hdl {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  flex-direction: column;
-  flex-wrap: nowrap;
-  font-size: 62px;
-  text-align: center;
-
-  &::after {
-    content: "";
-    display: block;
-    width: 75%;
-    height: 3px;
-    background-color: var(--secondary-color);
-    margin-top: 16px;
-  }
 }
 
 .signup-form {
@@ -121,79 +39,6 @@ button {
   flex-direction: column;
   width: 100%;
   gap: 24px;
-}
-
-.input-cnt {
-  width: 100%;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  position: relative;
-}
-
-.signup-input {
-  width: 422px;
-  padding: 12px 21px;
-  font-size: 20px;
-  border: 1px solid var(--style);
-  border-radius: 10px;
-  font-size: 19px;
-
-  &::placeholder {
-    color: var(--style);
-    font-size: 19px;
-  }
-
-  &:focus {
-    outline: 1px solid var(--primary-color);
-  }
-}
-
-.input-icon {
-  position: absolute;
-  top: 50%;
-  right: 21px;
-  transform: translateY(-50%);
-  color: var(--icons);
-}
-
-.input-icon-cnt {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  position: absolute;
-  top: 50%;
-  right: 21px;
-  transform: translateY(-50%);
-  color: var(--icons);
-
-  & .input-icon-btn {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    background-color: transparent;
-    border: none;
-    cursor: pointer;
-
-    &:hover img {
-      transform: scale(1.2);
-      filter: brightness(0.8);
-    }
-
-    & img {
-      width: 24px;
-      height: 24px;
-      transition: all 0.125s ease-in-out;
-    }
-  }
-}
-
-.input-warning {
-  position: absolute;
-  top: 105%;
-  left: 0px;
-  font-size: 14px;
-  color: var(--warning-color);
 }
 
 .accept-cnt {
@@ -215,7 +60,6 @@ button {
     align-items: center;
     gap: 8px;
     user-select: none;
-    /* cursor: pointer; */
   }
 
   & .check-box-png {
@@ -242,10 +86,6 @@ button {
       }
     }
   }
-}
-
-.form-btn-cnt {
-  padding-top: 8px;
 }
 
 .success-message-cnt {
@@ -276,59 +116,14 @@ button {
   padding: 25px;
   position: absolute;
   bottom: -100px;
-  left: 50%;
-  transform: translateX(-50%) translateY(0);
   transition: bottom 0.5s ease-in-out, transform 0.5s ease-in-out;
   font-size: 20px;
+
+  & span {
+    white-space: nowrap;
+  }
 }
 
 .success-message.show-message {
   bottom: 50%;
-  transform: translateX(-50%) translateY(50%);
-}
-
-.footer-login-signup {
-  position: absolute;
-  bottom: 0px;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  gap: 16px;
-  padding: 48px 0px;
-
-  & a {
-    color: var(--icons);
-    font-size: 16px;
-    transition: all 0.125s ease-in-out;
-
-    &:hover {
-      color: var(--secondary-color);
-    }
-  }
-}
-
-
-
-
-@media (max-width: 430px) {
-  .main-signup {
-    padding: 0 16px;
-  }
-
-  .signup-cnt {
-    padding: 32px 16px;
-  }
-
-  .form-btn-cnt {
-
-    flex-direction: column;
-  }
-
-  .btn-primary {
-    width: -webkit-fill-available;
-  }
-
-  .signup-input {
-    width: 100%;
-  }
 }
