--- a/css/add_task.css
+++ b/css/add_task.css
@@ -59,7 +59,7 @@
 .form-group input[type="text"],
 .form-group input[type="date"],
 .form-group textarea,
-.form-group select {
+.form-group select{
     font-family: "Inter", sans-serif;
     font-size: 20px;
     line-height: 120%;
@@ -70,11 +70,19 @@
 }
 
 .form-group input[type="text"]::placeholder,
-.form-group input[type="date"]::placeholder,
-.form-group textarea::placeholder {
+.form-group input[type="date"],
+.form-group textarea,
+.form-group select {
+    color: var(--primary-color);
+}
+
+#title::placeholder,
+#description::placeholder,
+#subtask-input::placeholder {
     color: #D1D1D1;
     opacity: 1;
 }
+
 
 .form-group input[type="text"]:focus,
 .form-group input[type="date"]:focus,
@@ -82,6 +90,94 @@
 .form-group select:focus {
     border-color: #29ABE2;
     outline: none;
+}
+
+.select-single {
+    position: relative;
+    width: 100%;
+}
+
+.select-box {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    border: 1px solid #ccc;
+    border-radius: 10px;
+    background: #fff;
+    cursor: pointer;
+    font-family: "Inter", sans-serif;
+    font-size: 20px;
+    line-height: 120%;
+    font-weight: 400;
+    padding-right: 8px;
+
+}
+
+.arrow-btn {
+    width: 32px;
+    height: 32px;
+    border: none;
+    background: none;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    border-radius: 50%;
+    transition: background 0.2s;
+    cursor: pointer;
+}
+
+.arrow-btn:hover {
+    background: rgba(0, 0, 0, 0.05);
+}
+
+.options-list {
+    position: absolute;
+    top: calc(100% + 4px);
+    left: 0;
+    width: 100%;
+    max-height: 200px;
+    overflow-y: auto;
+    background: #fff;
+    border: 1px solid #ccc;
+    border-radius: 10px;
+    box-shadow: 0 4px 4px rgba(0, 0, 0, 0.1);
+    display: none;
+    z-index: 20;
+}
+
+.options-list.show {
+    display: block;
+}
+
+.options-list li {
+    list-style: none;
+    padding: 12px 16px;
+    cursor: pointer;
+}
+
+.options-list li:hover {
+    background: rgba(0, 0, 0, 0.05);
+}
+
+.category-section {
+    padding: 8px 0px;
+    padding-left: 21px;
+    padding-right: 8px;
+    color: var(--primary-color);
+}
+
+#category {
+    padding-right: 40px;
+    background:
+        url('../assets/svg/arrow_dropdown_down.svg') no-repeat right 21px center;
+    appearance: none;
+}
+
+#category:focus {
+    background:
+        #fff url('../assets/svg/arrow_dropdown_up.svg') no-repeat right 21px center;
+    outline: none;
+    /* Optional: Fokus‑Outline woanders regeln */
 }
 
 
@@ -201,7 +297,7 @@
     gap: 0.5rem;
 }
 
-.select-box {
+/* .select-box {
     display: flex;
     align-items: center;
     border: 1px solid #ccc;
@@ -211,7 +307,7 @@
     background: #fff;
     width: 100%;
 
-}
+} */
 
 .selected-chips {
     display: flex;
